css style for headings

--- a/resume/style.css
+++ b/resume/style.css
@@ -3,3 +3,33 @@ body{
   font-size: 1em;
   color:#444;
 }
+
+h1{
+  font-family:open sans, arial, sans-serif;
+  font-size: 1em;
+  color:#444;
+}
+
+h2{
+  font-family:open sans, arial, sans-serif;
+  font-size: 1em;
+  color:#444;
+}
+
+h3{
+  font-family:open sans, arial, sans-serif;
+  font-size: 1em;
+  color:#444;
+}
+
+h4{
+  font-family:open sans, arial, sans-serif;
+  font-size: 1em;
+  color:#444;
+}
+
+h5{
+  font-family:open sans, arial, sans-serif;
+  font-size: 1em;
+  color:#444;
+}
