--- a/resume/style.css
+++ b/resume/style.css
@@ -11,3 +11,9 @@ h1{
   text-transform:uppercase;
   text-align: center;
 }
+
+title{
+  text-transform:uppercase;
+  font-size:1.5em;
+  color:#33485e;
+}
