--- a/resume/style.css
+++ b/resume/style.css
@@ -1,19 +1,26 @@
 body{
   font-family:open sans, arial, sans-serif;
-  font-size: 1em;
-  font-weight: 400;
+  font-size:1em;
+  font-weight:400;
   color:#404040;
 }
 
 h1{
-  font-size: 3em;
+  font-size:3em;
   color:#33485e;
   text-transform:uppercase;
-  text-align: center;
+  text-align:center;
 }
 
 title{
   text-transform:uppercase;
   font-size:1.5em;
   color:#33485e;
+}
+
+h2{
+  font-size:1.5em;
+  text-transform:uppercase;
+  background-color:#33485e;
+  color:white;
 }
