--- a/resume/style.css
+++ b/resume/style.css
@@ -30,3 +30,14 @@ h3{
   font-weight:600;
   font-size:1.5em;
 }
+
+h4{
+  font-weight:400;
+  font-size:1.5em;
+}
+
+h5{
+  font-weight:400;
+  font-size:1em;
+  font-style:italic;
+}
