--- a/resume/style.css
+++ b/resume/style.css
@@ -39,9 +39,8 @@ h3{
 }
 
 /*style for name of organizations*/
-.organization{
+h4{
   font-weight:400;
-  font-size:1.25em;
 }
 
 /*style for dates*/
@@ -70,6 +69,10 @@ li{
   margin-right: 0px;
   width: 70%;
   min-width: 300px;
+}
+
+.organization{
+  font-size:1.25em;
 }
 
 .date{
