--- a/resume/style.css
+++ b/resume/style.css
@@ -81,3 +81,10 @@ margin-left: 0px;
 margin-right: 0px;
 margin-bottom: 0px;
 }
+
+.description{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 0px;
+  margin-right: 0px;
+}
