--- a/resume/style.css
+++ b/resume/style.css
@@ -88,3 +88,9 @@ margin-bottom: 0px;
   margin-left: 0px;
   margin-right: 0px;
 }
+
+.menu{
+  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
+  text-align: center;
+}
