--- a/resume/style.css
+++ b/resume/style.css
@@ -116,3 +116,10 @@ margin-bottom: 0px;
   margin:0 auto;
   margin-bottom: 30px;
 }
+
+#container{
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-bottom: 50px;
+}
