--- a/resume/style.css
+++ b/resume/style.css
@@ -93,7 +93,7 @@ margin-bottom: 0px;
   margin: 0px 0px 0px 0px;
   padding: 0px 0px 0px 0px;
   text-align: center;
-  display: inline-block;
+  display: inline;
 }
 
 #degrees{
