--- a/resume/style.css
+++ b/resume/style.css
@@ -17,7 +17,7 @@ h1{
 }
 
 /*style for title of resume*/
- p{
+ strong{
   text-transform:uppercase;
   font-size:1.5em;
   color:#33485e;
@@ -76,10 +76,10 @@ li{
 }
 
 .date{
-margin-top: 2px;
-margin-left: 0px;
-margin-right: 0px;
-margin-bottom: 0px;
+  margin-top: 2px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
 }
 
 .description{
