--- a/resume/style.css
+++ b/resume/style.css
@@ -69,10 +69,10 @@ body{
 
 .menu{
   font-size:1em;
-  margin: 0px 0px 0px 0px;
-  padding: 0px 0px 0px 0px;
-  text-align: center;
-  display: inline;
+  margin: 0px;
+  padding: 0px;
+  text-align:center;
+  display:inline;
 }
 
 #degrees{
