--- a/Midterm/stylesheet.css
+++ b/Midterm/stylesheet.css
@@ -2,3 +2,8 @@ p{
   font-family: Helvetica, Arial, sans-serif;
   font-size: 12px;
 }
+
+h1{
+  font-family: Georgia, Garamond, serif;
+  font-size: 100px;
+}
