--- a/Midterm/stylesheet.css
+++ b/Midterm/stylesheet.css
@@ -7,3 +7,8 @@ h1{
   font-family: Georgia, Garamond, serif;
   font-size: 45px;
 }
+
+h2{
+  font-family: Georgia, Garamond, serif;
+  font-size: 25px;
+}
