--- a/Midterm/stylesheet.css
+++ b/Midterm/stylesheet.css
@@ -12,3 +12,17 @@ h2{
   font-family: Georgia, Garamond, serif;
   font-size: 25px;
 }
+
+.masthead{
+  font-size:1.5em;
+  text-transform:uppercase;
+  background-color:#33485e;
+  color:white;
+  font-weight:400;
+  margin-bottom: 10px;
+  margin-top: 20px;
+  margin-left: 0px;
+  margin-right: 0px;
+  width: 70%;
+  min-width: 300px;
+}
