--- a/Midterm/stylesheet.css
+++ b/Midterm/stylesheet.css
@@ -14,15 +14,15 @@ h2{
 }
 
 .masthead{
-  font-size:1.5em;
+  font-size:60px;
   text-transform:uppercase;
-  background-color:#33485e;
-  color:white;
+  background-color:#FF3333;
+  color:red;
   font-weight:400;
-  margin-bottom: 10px;
-  margin-top: 20px;
-  margin-left: 0px;
-  margin-right: 0px;
-  width: 70%;
-  min-width: 300px;
+  margin-bottom: 50px;
+  margin-top: 50px;
+  margin-left: 20px;
+  margin-right: 20px;
+  width: 100%;
+  min-width: 500px;
 }
