--- a/Midterm/stylesheet.css
+++ b/Midterm/stylesheet.css
@@ -14,12 +14,13 @@ h2{
 }
 
 .masthead{
-  font-size:60px;
+  font-size:70px;
+  font-style: oblique;
   text-transform:uppercase;
   background-color:#FF3333;
   color:white;
   text-align: center;
-  font-weight:400;
+  font-weight:500;
   margin-bottom: 50px;
   margin-top: 50px;
   margin-left: 0px;
