--- a/Midterm/stylesheet.css
+++ b/Midterm/stylesheet.css
@@ -1,3 +1,11 @@
+
+#container{
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-bottom: 50px;
+}
+
 p{
   font-family: Helvetica, Arial, sans-serif;
   font-size: 12px;
