--- a/Midterm/stylesheet.css
+++ b/Midterm/stylesheet.css
@@ -6,6 +6,12 @@
   padding-bottom: 50px;
 }
 
+#byline{
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-style: italic;
+}
+
 p{
   font-family: Helvetica, Arial, sans-serif;
   font-size: 12px;
@@ -25,7 +31,7 @@ h2{
   font-size:80px;
   font-style: oblique;
   text-transform:uppercase;
-  text-decoration: overline wavy green;
+  text-decoration: underline overline wavy green;
   background-color:#FF0033;
   color:white;
   text-align: center;
