css comment inserted

--- a/Midterm/stylesheet.css
+++ b/Midterm/stylesheet.css
@@ -27,6 +27,7 @@ h2{
   font-size: 25px;
 }
 
+/* masthead appears at the top of the webpage and represents a soccer field */
 .masthead{
   font-size:80px;
   font-style: oblique;
