--- a/resume/stylesheet.css
+++ b/resume/stylesheet.css
@@ -6,5 +6,10 @@
 }
 
 .banner{
-  
+  margin-bottom: 50px;
+  margin-top: 50px;
+  margin-left: 0px;
+  margin-right: 0px;
+  width: 100%;
+  min-width: 1000px;
 }
