--- a/resume/stylesheet.css
+++ b/resume/stylesheet.css
@@ -5,11 +5,27 @@
   padding-bottom: 50px;
 }
 
-.banner{
-  margin-bottom: 50px;
-  margin-top: 0px;
-  margin-left: 0px;
-  margin-right: 0px;
-  width: 100%;
-  min-width: 2000px;
+/* The hero image */
+.hero-image {
+  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("banner3.jpg");
+
+  /* Set a specific height */
+  height: 50%;
+
+  /* Position and center the image to scale nicely on all screens */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+/* Place text in the middle of the image */
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
