--- a/resume/stylesheet.css
+++ b/resume/stylesheet.css
@@ -1,31 +1,20 @@
 #container{
   width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding-bottom: 50px;
+  max-width: 4000px;
+  margin: 0px auto;
+  padding: 0px;
 }
 
-/* The hero image */
-.hero-image {
-  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("banner2.jpg");
-
-  /* Set a specific height */
-  height: 50%;
-
+/* banner at top of resume */
+.banner{
+  height: 30%;
+  margin-bottom: 50px;
+  margin-top: 60px;
+  margin-left: 0px;
+  margin-right: 10px;
   /* Position and center the image to scale nicely on all screens */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-}
-
-/* Place text in the middle of the image */
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
 }
