--- a/resume/stylesheet.css
+++ b/resume/stylesheet.css
@@ -9,12 +9,23 @@
 .banner{
   height: 30%;
   margin-bottom: 50px;
-  margin-top: 60px;
+  margin-top: 10px;
   margin-left: 0px;
   margin-right: 10px;
+
   /* Position and center the image to scale nicely on all screens */
+
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+}
+
+.menu{
+  font-family: Garamond, sans-serif;
+  font-size:20px;
+  margin: 10px;
+  padding: 0px;
+  text-align:center;
+  display:inline;
 }
