--- a/resume/stylesheet.css
+++ b/resume/stylesheet.css
@@ -1,6 +1,7 @@
 #container{
   width: 100%;
-  max-width: 4000px;
+  max-width: 1980px;
+  max-height: 1280px;
   margin: 0px auto;
   padding: 0px;
 }
@@ -8,6 +9,7 @@
 /* banner at top of resume */
 .banner{
   height: 30%;
+  width: 1280px;
   margin-bottom: 50px;
   margin-top: 10px;
   margin-left: 0px;
@@ -22,10 +24,36 @@
 }
 
 .menu{
-  font-family: Garamond, sans-serif;
+  font-family: Century, sans-serif;
+  word-spacing: 2em;
   font-size:20px;
   margin: 10px;
   padding: 0px;
   text-align:center;
   display:inline;
+}
+
+#name{
+  font-size:25px;
+  font-family: Georgia, serif;
+  color:#33485e;
+  text-transform:uppercase;
+  text-align:center;
+  width: 60%;
+  min-width: 300px;
+  margin: 0 auto;
+}
+
+.description{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+.top{
+  width: 60%;
+  min-width: 300px;
+  margin:0 auto;
+  margin-bottom: 30px;
 }
