--- a/resume/stylesheet.css
+++ b/resume/stylesheet.css
@@ -24,7 +24,7 @@
 }
 
 .menu{
-  margin-left: 10px;
+  margin-left: 5em;
   font-family: Century, sans-serif;
   word-spacing: 2em;
   font-size:20px;
