--- a/resume/stylesheet.css
+++ b/resume/stylesheet.css
@@ -1,13 +1,13 @@
 #container{
   width: 100%;
-  max-width: 1980px;
-  max-height: 1280px;
+  max-width: 1280px;
+  max-height: 1980px;
   margin: 0px auto;
   padding: 0px;
 }
 
-/* banner at top of resume */
-.banner{
+/* resume display on screen */
+.resume{
   height: 30%;
   width: 1280px;
   margin-bottom: 50px;
@@ -24,7 +24,7 @@
 }
 
 .menu{
-  font-family: Century, serif;
+  font-family: Georgia, serif;
   font-weight: bold;
   color: black;
   word-spacing: 2em;
