--- a/resume/stylesheet.css
+++ b/resume/stylesheet.css
@@ -1,3 +1,21 @@
+/* Extra small devices (phones, less than 768px) */
+/* No media query since this is the default in Bootstrap */
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: @screen-sm-min) {
+  min-width: 750px;
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: @screen-md-min) {
+  min-width:970px;
+}
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: @screen-lg-min) {
+  min-width:1170px;
+}
+
 #container{
   width: 100%;
   max-width: 1280px;
