--- a/html-frame/stylesheet.css
+++ b/html-frame/stylesheet.css
@@ -9,5 +9,17 @@ h1{
   text-align: center;
   font-family: Garamond, serif;
   font-weight: bold;
-  font-size: 60px;
+  font-size: 65px;
+}
+
+p{
+  text-align: center;
+  font-family: sans-serif;
+  text-transform: uppercase;
+}
+
+h2{
+  font-family: Garamond, serif;
+  font-weight: bold;
+  font-size: 35px;
 }
