padding for footer

--- a/html-frame/stylesheet.css
+++ b/html-frame/stylesheet.css
@@ -23,3 +23,11 @@ h2{
   font-weight: bold;
   font-size: 35px;
 }
+
+footer{
+  display:block;
+  text-align: center;
+  padding: 50px;
+  background-color: DarkSalmon;
+  color: white;
+}
