--- a/resume/stylesheet.css
+++ b/resume/stylesheet.css
@@ -6,18 +6,56 @@
 }
 
 .header{
-  padding: 60px;
   padding-top: 20px;
   padding-bottom: 10px;
+  padding-left:20px;
+  padding-right:20px;
   text-align: center;
-  font-family: Garamond, serif;
+  font-family: 'Space Mono', monospace;
   background: #FDE26C;
   color: black;
-  font-size: 24px;
+  font-size: 16px;
 }
 
 h1{
   font-family: 'Satisfy', cursive;
-  font-size: 112px;
+  font-size: 120px;
   text-shadow: 6px 6px #FF9999;
+}
+
+img{
+  display:block;
+  padding-top:40px;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 50%;
+}
+
+.row{
+  padding-top: 40px;
+  padding-left: 20px;
+  padding-right:20px;
+  padding-bottom:40px;
+}
+
+h2{
+  padding-top:40px;
+  padding-right:20px;
+  text-align:center;
+  font-family: 'Satisfy', cursive;
+  font-size: 55px;
+}
+
+/*styling for the intro and "about me" paragraph */
+.intro{
+  padding-right:40px;
+  padding-left:40px;
+  text-align: center;
+  font-family: 'Space Mono', monospace;
+  font-size: 18px;
+  background: #FDE26C;
+  box-shadow: 15px 15px #FFB7C5;
 }
