--- a/resume/stylesheet.css
+++ b/resume/stylesheet.css
@@ -55,7 +55,19 @@ h2{
   padding-left:40px;
   text-align: center;
   font-family: 'Space Mono', monospace;
-  font-size: 18px;
+  font-size: 19px;
   background: #FDE26C;
   box-shadow: 15px 15px #FFB7C5;
+}
+
+.menu{
+  font-size: 15px;
+  font-family: 'Space Mono', monospace;
+  padding-top: 20px;
+  text-align:center;
+  display:inline;
+}
+
+p{
+  font-family: 'Space Mono', monospace;
 }
