--- a/climate-crisis-story/stylesheet.css
+++ b/climate-crisis-story/stylesheet.css
@@ -17,6 +17,13 @@ h1{
   font-family:'Source Serif Pro', serif;
 }
 
+.center{
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+  width:50%;
+}
+
 .byline{
   text-align: center;
   font-family: sans-serif;
