--- a/climate-crisis-story/stylesheet.css
+++ b/climate-crisis-story/stylesheet.css
@@ -9,7 +9,7 @@ h1{
   text-align: center;
   font-family:'Source Serif Pro', serif;
   font-weight: bold;
-  font-size: 65px;
+  font-size: 60px;
 }
 
 .description{
@@ -26,13 +26,15 @@ h1{
 figcaption{
   font-family:'Source Serif Pro', serif;
   text-align:center;
-  font-size: 15px;
+  font-size: 14px;
 }
 
 .byline{
   text-align: center;
   font-family: sans-serif;
   text-transform: uppercase;
+  font-size:12.75px;
+  font-style: italic;
 }
 
 p{
