--- a/climate-crisis-story/stylesheet.css
+++ b/climate-crisis-story/stylesheet.css
@@ -43,7 +43,7 @@ p{
 }
 
 h2{
-  font-family: Garamond, serif;
+  font-family:'Source Serif Pro', serif;
   font-weight: bold;
   font-size: 35px;
 }
