--- a/climate-crisis-story/stylesheet.css
+++ b/climate-crisis-story/stylesheet.css
@@ -5,6 +5,16 @@
   padding-bottom: 50px;
 }
 
+.sidenav{
+  width: 300px; /* Set the width of the sidebar */
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: white;
+  padding-top: 20px;
+}
+
 h1{
   text-align: center;
   font-family:'Source Serif Pro', serif;
