--- a/climate-crisis-story/stylesheet.css
+++ b/climate-crisis-story/stylesheet.css
@@ -53,6 +53,6 @@ footer{
   font-size: 25px;
   text-align: center;
   padding: 50px;
-  background-color: DarkSalmon;
+  background-color: black;
   color: white;
 }
