--- a/climate-crisis-story/stylesheet.css
+++ b/climate-crisis-story/stylesheet.css
@@ -5,6 +5,121 @@
   padding-bottom: 50px;
 }
 
+.navbar-brand{
+  font-family:'Source Serif Pro', serif;
+  font-size:28px;
+}
+
+.nav-link{
+  font-family:'Source Serif Pro', serif;
+  font-size:18px;
+}
+
+body {
+    background: white;
+    padding: 0;
+    margin: 0;
+    font-family:'Source Serif Pro', serif;
+}
+
+#sidebarMenu {
+    font-family:'Source Serif Pro', serif;
+    font-size:12px;
+    height: 1580px;
+    position: absolute;
+    left:5;
+    padding-right:10px;
+    width: 200px;
+    margin-top: 60px;
+    transform: translateX(-250px);
+    transition: transform 250ms ease-in-out;
+    background: white;
+}
+.sidebarMenuInner{
+    margin:0;
+    padding:0;
+    border-top: 1px solid rgba(255, 255, 255, 0.10);
+}
+.sidebarMenuInner li{
+    font-family:'Source Serif Pro', serif;
+    font-size:15px;
+    list-style: circle;
+    color: black;
+    font-weight: normal;
+    padding: 20px;
+    cursor: pointer;
+    border-bottom: 1px solid white;
+}
+
+input[type="checkbox"]:checked ~ #sidebarMenu {
+    transform: translateX(0);
+}
+
+input[type=checkbox] {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    display: none;
+}
+
+.sidebarIconToggle {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    cursor: pointer;
+    position: absolute;
+    z-index: 99;
+    height: 100%;
+    width: 100%;
+    top: 100px;
+    left: 20px;
+    height: 22px;
+    width: 25px;
+}
+.spinner {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    position: absolute;
+    height: 4px;
+    width: 100%;
+    background-color:black;
+}
+.horizontal {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    position: relative;
+    float: left;
+    margin-top: 3px;
+}
+.diagonal.part-1 {
+    position: relative;
+    transition: all 0.3s;
+    box-sizing: border-box;
+    float: left;
+}
+.diagonal.part-2 {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    position: relative;
+    float: left;
+    margin-top: 3px;
+}
+input[type=checkbox]:checked ~ .sidebarIconToggle > .horizontal {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    opacity: 0;
+}
+input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-1 {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    transform: rotate(135deg);
+    margin-top: 8px;
+}
+input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
+    transition: all 0.3s;
+    box-sizing: border-box;
+    transform: rotate(-135deg);
+    margin-top: -9px;
+}
+
 h1{
   text-align: center;
   font-family:'Source Serif Pro', serif;
