--- a/data-viz-project/stylesheet.css
+++ b/data-viz-project/stylesheet.css
@@ -7,5 +7,14 @@
 
 .navbar-brand{
   font-family: 'Playfair Display', serif;
-  font-size:25px;
+  font-size:22.5px;
+}
+
+h1{
+  font-family: 'Playfair Display', serif;
+  font-size:60px;
+  font-style: italic;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 25px;
 }
