--- a/data-viz-project/stylesheet.css
+++ b/data-viz-project/stylesheet.css
@@ -17,4 +17,12 @@ h1{
   font-weight: bold;
   text-align: center;
   padding-top: 25px;
+  padding-bottom: 10px;
+}
+
+.byline{
+  font-family: 'Playfair Display', serif;
+  text-align:center;
+  font-size:17.5px;
+  padding-bottom: 20px;
 }
