--- a/data-viz-project/stylesheet.css
+++ b/data-viz-project/stylesheet.css
@@ -10,6 +10,21 @@
   font-size:22.5px;
 }
 
+.hero-image {
+  background-image: url("bling-ring.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text{
+  text-align: center;
+  font-style: 'Playfair Display', serif;
+  position: absolute;
+  color: black;
+}
+
 h1{
   font-family: 'Playfair Display', serif;
   font-size:60px;
@@ -20,9 +35,27 @@ h1{
   padding-bottom: 10px;
 }
 
+.description{
+  font-style: 'Playfair Display', serif;
+  font-size:18px;
+}
+
 .byline{
   font-family: 'Playfair Display', serif;
   text-align:center;
-  font-size:17.5px;
+  font-size:18px;
   padding-bottom: 20px;
+}
+
+p{
+  font-family: 'Libre Caslon Text', serif;
+  font-size:16px;
+}
+
+h2{
+  font-family: 'Libre Caslon Text', serif;
+  text-align: center;
+  font-size:40px;
+  font-style: italic;
+  text-decoration: underline overline red;
 }
