--- a/data-viz-project/stylesheet.css
+++ b/data-viz-project/stylesheet.css
@@ -10,19 +10,18 @@
   font-size:22.5px;
 }
 
-.hero-image {
-  background-image: url("bling-ring.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
+.heroImage {
+	background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.9)), url("https://images.unsplash.com/photo-1414235077428-338989a2e8c0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
+	height: 50%;
+	background-position: center;
+	background-repeat: no-repeat;
+	position: relative;
 }
 
-.hero-text{
-  text-align: center;
-  font-style: 'Playfair Display', serif;
-  position: absolute;
-  color: black;
+.heroContents {
+	padding-top: 25px;
+	text-align: center;
+	color: white;
 }
 
 h1{
