--- a/data-viz-project/stylesheet.css
+++ b/data-viz-project/stylesheet.css
@@ -10,18 +10,23 @@
   font-size:22.5px;
 }
 
-.heroImage {
-	background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.9)), url("https://images.unsplash.com/photo-1414235077428-338989a2e8c0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
-	height: 50%;
-	background-position: center;
+.hero-image {
+	background: url("bling-ring.jpg");
+	height: 100%;
+  background-position: center;
 	background-repeat: no-repeat;
 	position: relative;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
-.heroContents {
-	padding-top: 25px;
-	text-align: center;
-	color: white;
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 }
 
 h1{
