--- a/data-viz-project/stylesheet.css
+++ b/data-viz-project/stylesheet.css
@@ -13,6 +13,7 @@
 .hero-image {
 	background: url("bling-ring.jpg");
 	height: 100%;
+  width:100%;
   background-position: center;
 	background-repeat: no-repeat;
 	position: relative;
@@ -22,10 +23,6 @@
 
 .hero-text {
   text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   color: white;
 }
 
