--- a/data-viz-project/stylesheet.css
+++ b/data-viz-project/stylesheet.css
@@ -1,5 +1,6 @@
 #container{
   width: 100%;
+  height:100%;
   max-width: 1200px;
   margin: 0 auto;
   padding-bottom: 50px;
@@ -11,14 +12,18 @@
 }
 
 .hero-image {
-	background: url("bling-ring.jpg");
-	height: 100%;
-  width:100%;
+	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("bling-ring.jpg");
+  height: 100%;
   background-position: center;
-	background-repeat: no-repeat;
+  background-repeat: no-repeat;
+  background-size: cover;
 	position: relative;
   padding-left: 0px;
   padding-right: 0px;
+}
+
+@media (min-width: 768px) {
+  background: url("bling-ring.jpg") no-repeat center top;
 }
 
 .hero-text {
