--- a/data-viz-project/stylesheet.css
+++ b/data-viz-project/stylesheet.css
@@ -6,18 +6,42 @@
   padding-bottom: 50px;
 }
 
-.navbar-brand{
+.topnav {
+  background-color: black;
+  overflow: hidden;
   font-family: 'Playfair Display', serif;
-  font-size:22.5px;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: white;
+  text-align: center;
+  padding: 15px 100px;
+  font-size: 18px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: white;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: black;
+  color: white;
 }
 
 .hero-image {
-	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("bling-ring.jpg");
+	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0.5, 0, 0)), url("bling-ring.jpg");
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 	position: relative;
+  padding-top: 100px;
+  padding-bottom: 55px;
   padding-left: 0px;
   padding-right: 0px;
 }
@@ -29,6 +53,9 @@
 .hero-text {
   text-align: center;
   color: white;
+  padding-bottom: 0px;
+  padding-top: 100px;
+  text-shadow: 4px 4px black;
 }
 
 h1{
