--- a/data-viz-project/stylesheet.css
+++ b/data-viz-project/stylesheet.css
@@ -1,7 +1,7 @@
 #container{
   width: 100%;
   height:100%;
-  max-width: 1200px;
+  max-width: 800px;
   margin: 0 auto;
   padding-bottom: 50px;
 }
@@ -34,14 +34,14 @@
 }
 
 .hero-image {
-	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0.5, 0, 0)), url("bling-ring.jpg");
+	background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0.5, 0, 0)), url("bling-ring.jpg");
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 	position: relative;
   padding-top: 100px;
-  padding-bottom: 55px;
+  padding-bottom: 5px;
   padding-left: 0px;
   padding-right: 0px;
 }
@@ -64,13 +64,14 @@ h1{
   font-style: italic;
   font-weight: bold;
   text-align: center;
-  padding-top: 25px;
+  padding-top: 100px;
   padding-bottom: 10px;
 }
 
 .description{
   font-style: 'Playfair Display', serif;
   font-size:18px;
+  text-align: center;
 }
 
 .byline{
